2007-04-24  Raja R Harinath  <rharinath@novell.com>

	* BindingNavigatorTest.cs (CheckStandardItems): Avoid use of NUnit
	API newer than present in the tree.

2007-04-24  Alan McGovern <alan.mcgovern@gmail.com>

	* BindingNavigatorTest.cs: Initial tests

2007-04-23  Chris Toshok  <toshok@ximian.com>

	* TestHelper.cs: move RunningOnUnix here.

	* FocusTest.cs: use TestHelper.RunningOnUnix.

	* FormTest.cs: use TestHelper.RunningOnUnix.

2007-04-23  Jonathan Pobst  <monkey@jpobst.com>

	* TableLayoutTest.cs: Add a bunch of tests I thought I had lost
	before I lose them for real.

2007-04-21  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayoutTest.cs: Added test for bug #81397.

2007-04-21  Gert Driesen  <drieseng@users.sourceforge.net>

	* RichTextBoxTest.cs: Added test for bug #80620.
	* TreeViewTest.cs: Added test for bug #80620.
	* ListViewTest.cs: Added test for bug #80620.
	* UpDownTest.cs: Added test for bug #80620.
	* TextBoxTest.cs: Enabled test for bug #80620.

2007-04-19  Jonathan Pobst  <monkey@jpobst.com>

	* GroupBoxTest.cs: Add tests for default properties and
	DisplayRectangle.

2007-04-18  Gert Driesen  <drieseng@users.sourceforge.net>

	* FormTest.cs: Enabled test for bug #80773.

2007-04-17  Chris Toshok  <toshok@ximian.com>

	* BindingTest.cs: remove the NotWorking from
	BindingContextChangedTest2, and add a new, NotWorking test.

2007-04-16  Jonathan Pobst  <monkey@jpobst.com>

	* ButtonTest.cs, ToolStripItemTest.cs: Remove image stretching
	from ImageList tests and reenable tests.

2007-04-13  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripItemTest.cs: Enable a bunch of tests for recently 
	implemented properties.
	* ToolStripManager.cs: Add tests for Merge and RevertMerge.

2007-04-09  Gert Driesen  <drieseng@users.sourceforge.net>

	* DataGridTextBoxColumnTest.cs: Added IsInEditOrNavigateMode tests.
	Enabled test after IsInEditOrNavigateMode fix.

2007-04-09  Gert Driesen  <drieseng@users.sourceforge.net>
