@@ -1,3 +1,7 @@
+2007-04-24  Rolf Bjarne Kvinge <RKvinge@novell.com> 
+
+	* MdiFormTest.cs: Added tests for #81409.
+
 2007-04-24  Raja R Harinath  <rharinath@novell.com>
 
 	* BindingNavigatorTest.cs (CheckStandardItems): Avoid use of NUnit
